# -Personality-Core-AI-

./: .env.example  .env.mcp  .gitignore  .temp_merge_plan.json  .temp_patch.txt  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_REPORT.md  INSTALL_TEST_COMPLETE.md  INTEGRATION.md  LICENSE  MCP_SERVER_GUIDE.md  PERSONA_ENHANCEMENT_REPORT.md  PERSONA_FEED_ENHANCEMENT.md  PROJECT_SUMMARY.md  README.md  README_MCP.md  REFACTORING_REPORT.md  TEST_REPORT.md  agnes_mcp_config.example.yaml  app.py  docker-compose.yml  pareto_front_test.json  pyproject.toml  quickstart.py  requirements-lock.txt  requirements.txt  start_mcp.bat  test_and_start_mcp.bat  test_chat.py  test_chat2.py  test_chat3.py  test_chat4.py  test_chat5.py  test_hidden_switch.py  test_tune.py  可行性分析.md  项目规划书.md
api/: __init__.py  mcp_server.py  server.py
data/: archetypes.json  archetypes.md  archetypes_extended.json  enhanced_base_personas.json  expanded_personas.json  full_personas.json  full_personas_final.json  full_personas_merged.json  full_personas_v2.json  full_personas_v3.json  full_personas_v4_ai_generated.json  full_personas_with_prompts.json  fused_archetype.md  new_personas_extended.json  scene_dialogues.json  scene_dialogues_extended.json
docs/: SKILL.md  Samantha项目分析.md
docs/references/: tone_mapping.md
examples/: quick_chat_demo.py  usage_examples.md
mcp-server/: .env.example  README.md  package.json
scripts/: activate_yuan.py  ai_generate_complete.py  ai_generate_dialogues.py  ai_generate_futuristic.py  ai_generate_futuristic_complete.py  ai_generate_new_personas.py  ai_generate_simple.py  audit.py  demo.py  dialog_test.py  e2e_test.py  enhance_datasets.py  enhance_dialogues.py  enhance_personas.py  generate_synthetic.py  generate_synthetic_data.py  install_hermes_skill.ps1  memory_learning_patch.py  memory_learning_upgrade.py  merge_enhanced.py  merge_enhanced_data.py  merge_scene_dialogues.py  optimize_system_prompts.py  train_pipeline.py  verify.py  verify_full.py
src/personality_core/: __init__.py  __main__.py  auto_tune.py  auto_tune_extended.py  comparator.py  config.py  embedder.py  emotion_core.py  engine.py  engine_tuner.py  extra_objectives.py  gmm_clusterer.py  ica_extractor.py  llm_engine.py  memory_engine.py  morph.py  safety.py  scorer.py  settings.py  skill.py  system_prompt.py  trait_predictor.py
tests/: __init__.py  check_mcp_syntax.py  conftest.py  test_api.py  test_components.py  test_engine.py  test_enhanced_data.py  test_integration.py  test_mcp_import.py  test_mcp_tools.py  test_multi.py  test_security_and_safety.py  test_skill.py  validate_tools.py
ui/: gradio_app.py
(+6 files in other folders)
