[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "personality-core"
version = "0.1.0"
description = "基于向量嵌入空间的人格AI系统 — 把性格变成可计算、可旋转、可克隆的东西"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "personality-core contributors"},
]
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "gradio>=4.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
