[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personality-core"
version = "0.2.3"
description = "基于向量嵌入空间的人格AI系统 — 把性格变成可计算、可旋转、可克隆的东西"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "personality-core contributors"},
]
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "gradio>=4.0",
    "matplotlib>=3.8",
    "jieba>=0.42",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
